Calification bar added

--- a/resources/messages/Messages_es.properties
+++ b/resources/messages/Messages_es.properties
@@ -68,41 +68,42 @@ html.btnStackedBar      = Barras Apiladas
 html.btnViolin          = Violin
 html.btnViolinGroup     = Violin de Grupos
 
-label.activity         = \u00DAltima conexi\u00F3n:
-label.categoryitem     = Categor\u00EDa/Item:
-label.close            = Cerrar
-label.component        = Componente: 
-label.componentorevent = Componente\nEvento:
-label.course           = Curso: 
-label.coursemodule     = M\u00F3dulos:
-label.enddate          = Fecha de referencia final: 
-label.event            = Evento:
-label.filter           = Filtro...
-label.group            = Grupo:
-label.groupbydate      = Agrupar por: 
-label.host             = Host:
-label.lastupdate       = \u00DAltima actualizaci\u00F3n local:
-label.loadingqualifier = Generando el calificador del curso... (Este proceso puede tardar unos minutos)
-label.loadingstats     = Generando estadisticas...
-label.loadingstudents  = Calificaciones de alumnos cargadas: 
-label.loggedin         = Inicio sesi\u00F3n:
-label.never            = No disponible
-label.of               = de
-label.oldPassword      = Contrase\u00F1a antigua: 
-label.participants     = Participantes: 
-label.pass             = Contrase\u00F1a:
-label.rol              = Rol:
-label.savelocal        = Guardando en local...
-label.section          = Secciones:
-label.selectcourse     = Por favor, seleccione un curso:
-label.setMax           = Cambiar escala m\u00E1xima sugerida: 
-label.startdate        = Fecha de referencia inicial: 
-label.type             = Tipo:
-label.updatinglog      = Actualizando log...
-label.user             = Usuario:
-label.welcome          = Bienvenida/o
-label.withcompletion   = Act. Complet.
-label.withhidden       = Con ocultos
+label.activity                    = \u00DAltima conexi\u00F3n:
+label.categoryitem                = Categor\u00EDa/Item:
+label.close                       = Cerrar
+label.component                   = Componente: 
+label.componentorevent            = Componente\nEvento:
+label.course                      = Curso: 
+label.coursemodule                = M\u00F3dulos:
+label.enddate                     = Fecha de referencia final: 
+label.event                       = Evento:
+label.filter                      = Filtro...
+label.group                       = Grupo:
+label.groupbydate                 = Agrupar por: 
+label.host                        = Host:
+label.lastupdate                  = \u00DAltima actualizaci\u00F3n local:
+label.loadingActivitiesCompletion = Downloading Activity Completion for every user...
+label.loadingqualifier            = Generando el calificador del curso... (Este proceso puede tardar unos minutos)
+label.loadingstats                = Generando estadisticas...
+label.loadingstudents             = Calificaciones de alumnos cargadas: 
+label.loggedin                    = Inicio sesi\u00F3n:
+label.never                       = No disponible
+label.of                          = de
+label.oldPassword                 = Contrase\u00F1a antigua: 
+label.participants                = Participantes: 
+label.pass                        = Contrase\u00F1a:
+label.rol                         = Rol:
+label.savelocal                   = Guardando en local...
+label.section                     = Secciones:
+label.selectcourse                = Por favor, seleccione un curso:
+label.setMax                      = Cambiar escala m\u00E1xima sugerida: 
+label.startdate                   = Fecha de referencia inicial: 
+label.type                        = Tipo:
+label.updatinglog                 = Actualizando log...
+label.user                        = Usuario:
+label.welcome                     = Bienvenida/o
+label.withcompletion              = Act. Complet.
+label.withhidden                  = Con ocultos
 
 log.component.activity_report                                   = Actividad del curso
 log.component.assignment                                        = Tarea
