--- a/resources/messages/Messages_fr.properties
+++ b/resources/messages/Messages_fr.properties
@@ -68,41 +68,42 @@ html.btnStackedBar      = Bar Empil\u00E9e
 html.btnViolin          = Violin
 html.btnViolinGroup     = Violin Groups
 
-label.activity         = Derni\u00E8re connexion:
-label.categoryitem     = Cat\u00E9gorie / article:
-label.close            = Fermer
-label.component        = Composant:
-label.componentorevent = \u00C9v\u00E9nement de composant:
-label.course           = Cours: 
-label.coursemodule     = Modules de cours:
-label.enddate          = Date de r\u00E9f\u00E9rence finale:
-label.event            = Un \u00E9v\u00E9nement:
-label.filter           = Filtre...
-label.group            = Groupe:
-label.groupbydate      = Par groupe:
-label.host             = H\u00F4te:
-label.lastupdate       = Derni\u00E8re mise \u00E0 jour locale:
-label.loadingqualifier = G\u00E9n\u00E9ration du qualificatif de cours ... (Ce processus peut prendre un certain temps)
-label.loadingstats     = G\u00E9n\u00E9rer des statistiques ...
-label.loadingstudents  = Grades d'\u00E9l\u00E8ves charg\u00E9s:
-label.loggedin         = Logged in:
-label.never            = Indisponible
-label.of               = de
-label.oldPassword      = Ancien mot de passe:
-label.participants     = Participants:
-label.pass             = Mot de passe:
-label.rol              = Rol:
-label.savelocal        = \u00C9conomiser en local ...
-label.section          = Des sections:
-label.selectcourse     = Veuillez choisir un cours:
-label.setMax           = Changer l'\u00E9chelle max sugg\u00E9r\u00E9e:
-label.startdate        = Date de r\u00E9f\u00E9rence de d\u00E9part:
-label.type             = Type:
-label.updatinglog      = Mise \u00E0 jour du journal ...
-label.user             = Utilisateur:
-label.welcome          = Bienvenue
-label.withcompletion   = Completed Act.
-label.withhidden       = Avec cach\u00E9
+label.activity                    = Derni\u00E8re connexion:
+label.categoryitem                = Cat\u00E9gorie / article:
+label.close                       = Fermer
+label.component                   = Composant:
+label.componentorevent            = \u00C9v\u00E9nement de composant:
+label.course                      = Cours: 
+label.coursemodule                = Modules de cours:
+label.enddate                     = Date de r\u00E9f\u00E9rence finale:
+label.event                       = Un \u00E9v\u00E9nement:
+label.filter                      = Filtre...
+label.group                       = Groupe:
+label.groupbydate                 = Par groupe:
+label.host                        = H\u00F4te:
+label.lastupdate                  = Derni\u00E8re mise \u00E0 jour locale:
+label.loadingActivitiesCompletion = T\u00E9l\u00E9chargement Activit\u00E9 ach\u00E8vement pour chaque utilisateur ...
+label.loadingqualifier            = G\u00E9n\u00E9ration du qualificatif de cours ... (Ce processus peut prendre un certain temps)
+label.loadingstats                = G\u00E9n\u00E9rer des statistiques ...
+label.loadingstudents             = Grades d'\u00E9l\u00E8ves charg\u00E9s:
+label.loggedin                    = Logged in:
+label.never                       = Indisponible
+label.of                          = de
+label.oldPassword                 = Ancien mot de passe:
+label.participants                = Participants:
+label.pass                        = Mot de passe:
+label.rol                         = Rol:
+label.savelocal                   = \u00C9conomiser en local ...
+label.section                     = Des sections:
+label.selectcourse                = Veuillez choisir un cours:
+label.setMax                      = Changer l'\u00E9chelle max sugg\u00E9r\u00E9e:
+label.startdate                   = Date de r\u00E9f\u00E9rence de d\u00E9part:
+label.type                        = Type:
+label.updatinglog                 = Mise \u00E0 jour du journal ...
+label.user                        = Utilisateur:
+label.welcome                     = Bienvenue
+label.withcompletion              = Completed Act.
+label.withhidden                  = Avec cach\u00E9
 
 log.component.activity_report                                   = Activit\u00E9s du cours
 log.component.assignment                                        = Devoir
