--- a/resources/messages/Messages_it.properties
+++ b/resources/messages/Messages_it.properties
@@ -68,41 +68,42 @@ html.btnStackedBar      = A Barre In Pila
 html.btnViolin          = Violin
 html.btnViolinGroup     = Violin Groups
 
-label.activity         = Ultima connessione:
-label.categoryitem     = Categoria / Articolo:
-label.close            = Vicino
-label.component        = Componente:
-label.componentorevent = Evento componente:
-label.course           = Corso: 
-label.coursemodule     = Moduli del corso:
-label.enddate          = Data di riferimento di fine:
-label.event            = Evento:
-label.filter           = Filtro...
-label.group            = Gruppo:
-label.groupbydate      = Raggruppa per:
-label.host             = Ospite:
-label.lastupdate       = Ultimo aggiornamento locale:
-label.loadingqualifier = Generazione del qualificatore del corso ... (Questo processo potrebbe richiedere del tempo)
-label.loadingstats     = Generazione di statistiche ...
-label.loadingstudents  = Voti degli studenti caricati:
-label.loggedin         = Logged in:
-label.never            = Non disponibile
-label.of               = di
-label.oldPassword      = Vecchia password:
-label.participants     = partecipanti:
-label.pass             = La password:
-label.rol              = Rol:
-label.savelocal        = Salvataggio in locale ...
-label.section          = Sezioni:
-label.selectcourse     = Per favore, seleziona un corso:
-label.setMax           = Modifica scala massima suggerita:
-label.startdate        = Inizia la data di riferimento:
-label.type             = Genere:
-label.updatinglog      = Aggiornamento del registro ...
-label.user             = Utente:
-label.welcome          = Benvenuto
-label.withcompletion   = Completed Act.
-label.withhidden       = Con nascosto
+label.activity                    = Ultima connessione:
+label.categoryitem                = Categoria / Articolo:
+label.close                       = Vicino
+label.component                   = Componente:
+label.componentorevent            = Evento componente:
+label.course                      = Corso: 
+label.coursemodule                = Moduli del corso:
+label.enddate                     = Data di riferimento di fine:
+label.event                       = Evento:
+label.filter                      = Filtro...
+label.group                       = Gruppo:
+label.groupbydate                 = Raggruppa per:
+label.host                        = Ospite:
+label.lastupdate                  = Ultimo aggiornamento locale:
+label.loadingActivitiesCompletion = Il download di attivit\u00E0 di completamento per ogni utente ...
+label.loadingqualifier            = Generazione del qualificatore del corso ... (Questo processo potrebbe richiedere del tempo)
+label.loadingstats                = Generazione di statistiche ...
+label.loadingstudents             = Voti degli studenti caricati:
+label.loggedin                    = Logged in:
+label.never                       = Non disponibile
+label.of                          = di
+label.oldPassword                 = Vecchia password:
+label.participants                = partecipanti:
+label.pass                        = La password:
+label.rol                         = Rol:
+label.savelocal                   = Salvataggio in locale ...
+label.section                     = Sezioni:
+label.selectcourse                = Per favore, seleziona un corso:
+label.setMax                      = Modifica scala massima suggerita:
+label.startdate                   = Inizia la data di riferimento:
+label.type                        = Genere:
+label.updatinglog                 = Aggiornamento del registro ...
+label.user                        = Utente:
+label.welcome                     = Benvenuto
+label.withcompletion              = Completed Act.
+label.withhidden                  = Con nascosto
 
 log.component.activity_report                                   = Attivit\u00E0 del corso
 log.component.assignment                                        = Compito
