--- a/resources/messages/Messages_ca.properties
+++ b/resources/messages/Messages_ca.properties
@@ -68,41 +68,42 @@ html.btnStackedBar      = Barres Apilades
 html.btnViolin          = Violin
 html.btnViolinGroup     = Violin Groups
 
-label.activity         = \u00DAltima connexi\u00F3:
-label.categoryitem     = Categoria / article:
-label.close            = Tanca
-label.component        = Component:
-label.componentorevent = Esdeveniment de component:
-label.course           = Curs: 
-label.coursemodule     = M\u00F2duls del curs:
-label.enddate          = Data de refer\u00E8ncia final:
-label.event            = Esdeveniment:
-label.filter           = Filtre ...
-label.group            = Grup:
-label.groupbydate      = Agrupar per:
-label.host             = Amfitri\u00F3:
-label.lastupdate       = \u00DAltima actualitzaci\u00F3 local:
-label.loadingqualifier = Generant el qualificador del curs ... (Aquest proc\u00E9s pot trigar una mica de temps)
-label.loadingstats     = Generant estad\u00EDstiques ...
-label.loadingstudents  = S'han carregat les qualificacions dels estudiants:
-label.loggedin         = Logged in:
-label.never            = No disponible
-label.of               = de
-label.oldPassword      = Contrasenya antiga:
-label.participants     = Participants:
-label.pass             = Contrasenya:
-label.rol              = Rol:
-label.savelocal        = S'est\u00E0 desant en local ...
-label.section          = Seccions:
-label.selectcourse     = Seleccioneu un curs:
-label.setMax           = Canvia l'escala m\u00E0xima suggerida:
-label.startdate        = Data de refer\u00E8ncia inicial:
-label.type             = Tipus:
-label.updatinglog      = S'est\u00E0 actualitzant el registre ...
-label.user             = Usuari:
-label.welcome          = Benvinguda
-label.withcompletion   = Completed Act.
-label.withhidden       = Amb ocults
+label.activity                    = \u00DAltima connexi\u00F3:
+label.categoryitem                = Categoria / article:
+label.close                       = Tanca
+label.component                   = Component:
+label.componentorevent            = Esdeveniment de component:
+label.course                      = Curs: 
+label.coursemodule                = M\u00F2duls del curs:
+label.enddate                     = Data de refer\u00E8ncia final:
+label.event                       = Esdeveniment:
+label.filter                      = Filtre ...
+label.group                       = Grup:
+label.groupbydate                 = Agrupar per:
+label.host                        = Amfitri\u00F3:
+label.lastupdate                  = \u00DAltima actualitzaci\u00F3 local:
+label.loadingActivitiesCompletion = Desc\u00E0rrega d'Activitat de finalitzaci\u00F3 per a cada usuari ...
+label.loadingqualifier            = Generant el qualificador del curs ... (Aquest proc\u00E9s pot trigar una mica de temps)
+label.loadingstats                = Generant estad\u00EDstiques ...
+label.loadingstudents             = S'han carregat les qualificacions dels estudiants:
+label.loggedin                    = Logged in:
+label.never                       = No disponible
+label.of                          = de
+label.oldPassword                 = Contrasenya antiga:
+label.participants                = Participants:
+label.pass                        = Contrasenya:
+label.rol                         = Rol:
+label.savelocal                   = S'est\u00E0 desant en local ...
+label.section                     = Seccions:
+label.selectcourse                = Seleccioneu un curs:
+label.setMax                      = Canvia l'escala m\u00E0xima suggerida:
+label.startdate                   = Data de refer\u00E8ncia inicial:
+label.type                        = Tipus:
+label.updatinglog                 = S'est\u00E0 actualitzant el registre ...
+label.user                        = Usuari:
+label.welcome                     = Benvinguda
+label.withcompletion              = Completed Act.
+label.withhidden                  = Amb ocults
 
 log.component.activity_report                                   = Informe d'activitat
 log.component.assignment                                        = Tasca
