--- a/resources/messages/Messages_de.properties
+++ b/resources/messages/Messages_de.properties
@@ -68,41 +68,42 @@ html.btnStackedBar      = Stacked Bar
 html.btnViolin          = Violin
 html.btnViolinGroup     = Violin Groups
 
-label.activity         = Letzte Verbindung:
-label.categoryitem     = Kategorie / Gegenstand:
-label.close            = Schlie\u00DFen
-label.component        = Komponente:
-label.componentorevent = Komponentenereignis:
-label.course           = Kurs: 
-label.coursemodule     = Kursmodule:
-label.enddate          = Enddatum:
-label.event            = Veranstaltung:
-label.filter           = Filter...
-label.group            = Gruppe:
-label.groupbydate      = Gruppiere nach:
-label.host             = Wirt:
-label.lastupdate       = Letzte lokale Aktualisierung:
-label.loadingqualifier = Kursqualifikator wird generiert ... (Dieser Vorgang kann einige Zeit dauern.)
-label.loadingstats     = Statistiken werden erstellt ...
-label.loadingstudents  = Sch\u00FClernoten geladen:
-label.loggedin         = Logged in:
-label.never            = Nicht verf\u00FCgbar
-label.of               = von
-label.oldPassword      = Altes Passwort:
-label.participants     = Teilnehmer:
-label.pass             = Passwort:
-label.rol              = Rol:
-label.savelocal        = Speichern in lokaler ...
-label.section          = Abschnitt:
-label.selectcourse     = Bitte w\u00E4hlen Sie einen Kurs aus:
-label.setMax           = Vorgeschlagene maximale Skala \u00E4ndern:
-label.startdate        = Startbezugsdatum:
-label.type             = Art:
-label.updatinglog      = Protokoll wird aktualisiert ...
-label.user             = Nutzername:
-label.welcome          = Herzlich willkommen
-label.withcompletion   = Completed Act.
-label.withhidden       = Mit verstecktem
+label.activity                    = Letzte Verbindung:
+label.categoryitem                = Kategorie / Gegenstand:
+label.close                       = Schlie\u00DFen
+label.component                   = Komponente:
+label.componentorevent            = Komponentenereignis:
+label.course                      = Kurs: 
+label.coursemodule                = Kursmodule:
+label.enddate                     = Enddatum:
+label.event                       = Veranstaltung:
+label.filter                      = Filter...
+label.group                       = Gruppe:
+label.groupbydate                 = Gruppiere nach:
+label.host                        = Wirt:
+label.lastupdate                  = Letzte lokale Aktualisierung:
+label.loadingActivitiesCompletion = Das Herunterladen Aktivit\u00E4t Abschluss f\u00FCr jeden Benutzer ...
+label.loadingqualifier            = Kursqualifikator wird generiert ... (Dieser Vorgang kann einige Zeit dauern.)
+label.loadingstats                = Statistiken werden erstellt ...
+label.loadingstudents             = Sch\u00FClernoten geladen:
+label.loggedin                    = Logged in:
+label.never                       = Nicht verf\u00FCgbar
+label.of                          = von
+label.oldPassword                 = Altes Passwort:
+label.participants                = Teilnehmer:
+label.pass                        = Passwort:
+label.rol                         = Rol:
+label.savelocal                   = Speichern in lokaler ...
+label.section                     = Abschnitt:
+label.selectcourse                = Bitte w\u00E4hlen Sie einen Kurs aus:
+label.setMax                      = Vorgeschlagene maximale Skala \u00E4ndern:
+label.startdate                   = Startbezugsdatum:
+label.type                        = Art:
+label.updatinglog                 = Protokoll wird aktualisiert ...
+label.user                        = Nutzername:
+label.welcome                     = Herzlich willkommen
+label.withcompletion              = Completed Act.
+label.withhidden                  = Mit verstecktem
 
 log.component.activity_report                                   = Kursaktivit\u00E4t
 log.component.assignment                                        = Aufgabe
