--- a/resources/messages/Messages_en.properties
+++ b/resources/messages/Messages_en.properties
@@ -68,41 +68,42 @@ html.btnStackedBar      = Stacked Bar
 html.btnViolin          = Violin
 html.btnViolinGroup     = Violin Groups
 
-label.activity         = Last connection:
-label.categoryitem     = Category/Item:
-label.close            = Close
-label.component        = Component: 
-label.componentorevent = Component\nEvent:
-label.course           = Course: 
-label.coursemodule     = Course module:
-label.enddate          = End reference date: 
-label.event            = Event: 
-label.filter           = Filter...
-label.group            = Group:
-label.groupbydate      = Group by: 
-label.host             = Host:
-label.lastupdate       = Last local update:
-label.loadingqualifier = Generating course qualifier... (This process may take some time)
-label.loadingstats     = Generating statistics...
-label.loadingstudents  = Student grades loaded: 
-label.loggedin         = Logged in:
-label.never            = Not available
-label.of               = of
-label.oldPassword      = Old Password: 
-label.participants     = Participants: 
-label.pass             = Password:
-label.rol              = Rol:
-label.savelocal        = Saving in local...
-label.section          = Section:
-label.selectcourse     = Please, select a course:
-label.setMax           = Change suggested max scale: 
-label.startdate        = Start reference date: 
-label.type             = Type:
-label.updatinglog      = Updating log...
-label.user             = User:
-label.welcome          = Welcome
-label.withcompletion   = Completed Act.
-label.withhidden       = With hidden
+label.activity                    = Last connection:
+label.categoryitem                = Category/Item:
+label.close                       = Close
+label.component                   = Component: 
+label.componentorevent            = Component\nEvent:
+label.course                      = Course: 
+label.coursemodule                = Course module:
+label.enddate                     = End reference date: 
+label.event                       = Event: 
+label.filter                      = Filter...
+label.group                       = Group:
+label.groupbydate                 = Group by: 
+label.host                        = Host:
+label.lastupdate                  = Last local update:
+label.loadingActivitiesCompletion = Downloading Activity Completion for every user...
+label.loadingqualifier            = Generating course qualifier... (This process may take some time)
+label.loadingstats                = Generating statistics...
+label.loadingstudents             = Student grades loaded: 
+label.loggedin                    = Logged in:
+label.never                       = Not available
+label.of                          = of
+label.oldPassword                 = Old Password: 
+label.participants                = Participants: 
+label.pass                        = Password:
+label.rol                         = Rol:
+label.savelocal                   = Saving in local...
+label.section                     = Section:
+label.selectcourse                = Please, select a course:
+label.setMax                      = Change suggested max scale: 
+label.startdate                   = Start reference date: 
+label.type                        = Type:
+label.updatinglog                 = Updating log...
+label.user                        = User:
+label.welcome                     = Welcome
+label.withcompletion              = Completed Act.
+label.withhidden                  = With hidden
 
 log.component.activity_report                                   = Activity report
 log.component.assignment                                        = Assignment
