--- a/resources/messages/Messages_pt.properties
+++ b/resources/messages/Messages_pt.properties
@@ -68,41 +68,42 @@ html.btnStackedBar      = Bar Empilhados
 html.btnViolin          = Violin
 html.btnViolinGroup     = Violin Groups
 
-label.activity         = \u00DAltima conex\u00E3o:
-label.categoryitem     = Categoria / Item:
-label.close            = Perto
-label.component        = Componente:
-label.componentorevent = Evento Componente:
-label.course           = Curso: 
-label.coursemodule     = M\u00F3dulos do curso:
-label.enddate          = Data de refer\u00EAncia final:
-label.event            = Evento:
-label.filter           = Filtro...
-label.group            = Grupo:
-label.groupbydate      = Agrupar por:
-label.host             = Hospedeiro:
-label.lastupdate       = \u00DAltima atualiza\u00E7\u00E3o local:
-label.loadingqualifier = Gerando qualificador do curso ... (Esse processo pode levar algum tempo)
-label.loadingstats     = Gerando estat\u00EDsticas ...
-label.loadingstudents  = Notas do aluno carregado:
-label.loggedin         = Logged in:
-label.never            = N\u00E3o dispon\u00EDvel
-label.of               = do
-label.oldPassword      = Senha Antiga:
-label.participants     = Participantes:
-label.pass             = Senha:
-label.rol              = Rol:
-label.savelocal        = Salvando em locais ...
-label.section          = Se\u00E7\u00F5es:
-label.selectcourse     = Por favor, selecione um curso:
-label.setMax           = Alterar escala m\u00E1xima sugerida:
-label.startdate        = Data de refer\u00EAncia inicial:
-label.type             = Tipo:
-label.updatinglog      = Atualizando log ...
-label.user             = Usu\u00E1rio:
-label.welcome          = Bem vinda
-label.withcompletion   = Completed Act.
-label.withhidden       = Com oculto\r\n\r\n\r\n
+label.activity                    = \u00DAltima conex\u00E3o:
+label.categoryitem                = Categoria / Item:
+label.close                       = Perto
+label.component                   = Componente:
+label.componentorevent            = Evento Componente:
+label.course                      = Curso: 
+label.coursemodule                = M\u00F3dulos do curso:
+label.enddate                     = Data de refer\u00EAncia final:
+label.event                       = Evento:
+label.filter                      = Filtro...
+label.group                       = Grupo:
+label.groupbydate                 = Agrupar por:
+label.host                        = Hospedeiro:
+label.lastupdate                  = \u00DAltima atualiza\u00E7\u00E3o local:
+label.loadingActivitiesCompletion = Baixando Atividade Conclus\u00E3o para cada usu\u00E1rio ...
+label.loadingqualifier            = Gerando qualificador do curso ... (Esse processo pode levar algum tempo)
+label.loadingstats                = Gerando estat\u00EDsticas ...
+label.loadingstudents             = Notas do aluno carregado:
+label.loggedin                    = Logged in:
+label.never                       = N\u00E3o dispon\u00EDvel
+label.of                          = do
+label.oldPassword                 = Senha Antiga:
+label.participants                = Participantes:
+label.pass                        = Senha:
+label.rol                         = Rol:
+label.savelocal                   = Salvando em locais ...
+label.section                     = Se\u00E7\u00F5es:
+label.selectcourse                = Por favor, selecione um curso:
+label.setMax                      = Alterar escala m\u00E1xima sugerida:
+label.startdate                   = Data de refer\u00EAncia inicial:
+label.type                        = Tipo:
+label.updatinglog                 = Atualizando log ...
+label.user                        = Usu\u00E1rio:
+label.welcome                     = Bem vinda
+label.withcompletion              = Completed Act.
+label.withhidden                  = Com oculto\r\n\r\n\r\n
 
 log.component.activity_report                                   = Relat\u00F3rio de atividades
 log.component.assignment                                        = Trabalho
