Added mode offline

--- a/resources/messages/Messages_ca.properties
+++ b/resources/messages/Messages_ca.properties
@@ -24,6 +24,7 @@ chartlabel.upperlimit     = L\u00EDmit superior
 
 checkbox.updatedata = Actualitzaci\u00F3 de dades
 
+chk.offlinemode  = Mode Desconnectat
 chk.savehost     = Recorda l'amfitri\u00F3
 chk.saveusername = Recorda usuari
 
@@ -37,20 +38,22 @@ choiceBox.YEAR_MONTH   = Mesos
 choiceBox.YEAR_QUARTER = Trimestres
 choiceBox.YEAR_WEEK    = Setmanes
 
-error.fields          = Heu de completar tots els camps.
-error.generateCharts  = No es poden generar gr\u00E0fics.
-error.generatedataset = S'ha produ\u00EFt un error en construir el conjunt de dades.
-error.host            = No es pot connectar amb l'amfitri\u00F3.
-error.login           = Nom d'usuari o contrasenya incorrectes.
-error.malformedurl    = URL mal format. Heu afegit el protocol http (s)?
-error.nocourse        = Heu de seleccionar un curs.
-error.saveallcharts   = No es poden exportar gr\u00E0fics.
-error.savechart       = Error en desar el diagrama.
-error.savecsvfiles    = No s'han pogut exportar les dades en format CSV.
-error.userdata        = Error en recuperar les dades de l'usuari.
+error.fields            = Heu de completar tots els camps.
+error.generateCharts    = No es poden generar gr\u00E0fics.
+error.generatedataset   = S'ha produ\u00EFt un error en construir el conjunt de dades.
+error.host              = No es pot connectar amb l'amfitri\u00F3.
+error.login             = Nom d'usuari o contrasenya incorrectes.
+error.malformedurl      = URL mal format. Heu afegit el protocol http (s)?
+error.nocourse          = Heu de seleccionar un curs.
+error.saveallcharts     = No es poden exportar gr\u00E0fics.
+error.savechart         = Error en desar el diagrama.
+error.savecsvfiles      = No s'han pogut exportar les dades en format CSV.
+error.updateofflinemode = El curs no es pot actualitzar en mode fora de l\u00EDnia. Si us plau, sortir i entrar de nou en la manera en l\u00EDnia.
+error.userdata          = Error en recuperar les dades de l'usuari.
 
-header.passwordChangedMessage = S'ha detectat la contrasenya
-header.passwordDateTime       = Contrasenya de data anterior:
+header.passwordChangedMessage   = S'ha detectat la contrasenya
+header.passwordDateTime         = Contrasenya de data anterior:
+header.passwordIncorrectMessage = Contrasenya incorrecta
 
 html.btnActivitiesTable = Compleci\u00F3 de l'activitat
 html.btnBoxPlot         = Diagramacaja
@@ -602,6 +605,7 @@ tab.section      = Secci\u00F3
 
 text.all                = Tots
 text.betweendates       = Between {0} and {1} 
+text.cache              = Els arxius locals
 text.confirmation       = Confirmation
 text.confirmationtext   = Are you sure to remove the cache of the selected course?
 text.days               = Dies
@@ -621,6 +625,7 @@ text.sectionplaceholder = Portada
 text.selectedUsers      = Selected Users
 text.stats              = Estad\u00EDstiques
 
-title.passwordChanged = S'ha canviat la contrasenya
+title.passwordChanged   = S'ha canviat la contrasenya
+title.passwordIncorrect = Contrasenya incorrecta
 
 tooltip.insecureprotocol = Aquesta connexi\u00F3 no \u00E9s segura.\r\nLes credencials es poden veure compromeses.
