--- a/resources/messages/Messages_de.properties
+++ b/resources/messages/Messages_de.properties
@@ -24,6 +24,7 @@ chartlabel.upperlimit     = Obere Grenze
 
 checkbox.updatedata = Daten aktualisieren
 
+chk.offlinemode  = Offline-Modus
 chk.savehost     = Erinnere dich an den Gastgeber
 chk.saveusername = Benutzer merken
 
@@ -37,20 +38,22 @@ choiceBox.YEAR_MONTH   = Monate
 choiceBox.YEAR_QUARTER = Viertel
 choiceBox.YEAR_WEEK    = Wochen
 
-error.fields          = Sie m\u00FCssen alle Felder ausf\u00FCllen.
-error.generateCharts  = Diagramme k\u00F6nnen nicht generiert werden.
-error.generatedataset = Fehler beim Erstellen des Datasets.
-error.host            = Verbindung zum Host nicht m\u00F6glich.
-error.login           = Benutzername oder Passwort falsch.
-error.malformedurl    = Schlecht geformte URL. Haben Sie http (s) -Protokoll hinzugef\u00FCgt?
-error.nocourse        = Sie m\u00FCssen einen Kurs ausw\u00E4hlen.
-error.saveallcharts   = Diagramme k\u00F6nnen nicht exportiert werden.
-error.savechart       = Fehler beim Speichern des Diagramms.
-error.savecsvfiles    = Die Daten konnten nicht im CSV-Format exportiert werden.
-error.userdata        = Fehler beim Wiederherstellen der Benutzerdaten.
+error.fields            = Sie m\u00FCssen alle Felder ausf\u00FCllen.
+error.generateCharts    = Diagramme k\u00F6nnen nicht generiert werden.
+error.generatedataset   = Fehler beim Erstellen des Datasets.
+error.host              = Verbindung zum Host nicht m\u00F6glich.
+error.login             = Benutzername oder Passwort falsch.
+error.malformedurl      = Schlecht geformte URL. Haben Sie http (s) -Protokoll hinzugef\u00FCgt?
+error.nocourse          = Sie m\u00FCssen einen Kurs ausw\u00E4hlen.
+error.saveallcharts     = Diagramme k\u00F6nnen nicht exportiert werden.
+error.savechart         = Fehler beim Speichern des Diagramms.
+error.savecsvfiles      = Die Daten konnten nicht im CSV-Format exportiert werden.
+error.updateofflinemode = Der Kurs kann nicht im Offline-Modus aktualisiert werden. Bitte melden Sie sich ab und melden Sie sich im Online-Modus zur\u00FCck.
+error.userdata          = Fehler beim Wiederherstellen der Benutzerdaten.
 
-header.passwordChangedMessage = Gefunden wurde ein ge\u00E4ndertes Passwort
-header.passwordDateTime       = Passwort f\u00FCr das vorherige Datum:
+header.passwordChangedMessage   = Gefunden wurde ein ge\u00E4ndertes Passwort
+header.passwordDateTime         = Passwort f\u00FCr das vorherige Datum:
+header.passwordIncorrectMessage = Falsches Passwort
 
 html.btnActivitiesTable = Aktivit\u00E4tsabschluss
 html.btnBoxPlot         = BoxPlot
@@ -602,6 +605,7 @@ tab.section      = Abschnitt
 
 text.all                = Alles
 text.betweendates       = Between {0} and {1}
+text.cache              = Lokale Dateien
 text.confirmation       = Confirmation
 text.confirmationtext   = Are you sure to remove the cache of the selected course?
 text.days               = Tage
@@ -621,6 +625,7 @@ text.sectionplaceholder = Titelseite
 text.selectedUsers      = Selected Users
 text.stats              = Kursstatistiken
 
-title.passwordChanged = Passwort wurde ge\u00E4ndert
+title.passwordChanged   = Passwort wurde ge\u00E4ndert
+title.passwordIncorrect = Falsches Passwort
 
 tooltip.insecureprotocol = Diese Verbindung ist nicht sicher.\r\nAnmeldeinformationen sind m\u00F6glicherweise kompromittiert.
