--- a/resources/messages/Messages_en.properties
+++ b/resources/messages/Messages_en.properties
@@ -24,6 +24,7 @@ chartlabel.upperlimit     = Upper Limit
 
 checkbox.updatedata = Update data
 
+chk.offlinemode  = Offline Mode
 chk.savehost     = Remember host
 chk.saveusername = Remember user
 
@@ -37,20 +38,22 @@ choiceBox.YEAR_MONTH   = Months
 choiceBox.YEAR_QUARTER = Quarters
 choiceBox.YEAR_WEEK    = Weeks
 
-error.fields          = You have to complete all the fields.
-error.generateCharts  = Can't generate charts.
-error.generatedataset = Error building the dataset.
-error.host            = Can't connect with host.
-error.login           = Wrong Username or password.
-error.malformedurl    = Badly formed URL. Did you add http(s) protocol?
-error.nocourse        = You have to select a course.
-error.saveallcharts   = Can't export charts.
-error.savechart       = Error saving chart.
-error.savecsvfiles    = The data could not be exported in CSV format.
-error.userdata        = Error when recovering user data.
+error.fields            = You have to complete all the fields.
+error.generateCharts    = Can't generate charts.
+error.generatedataset   = Error building the dataset.
+error.host              = Can't connect with host.
+error.login             = Wrong Username or password.
+error.malformedurl      = Badly formed URL. Did you add http(s) protocol?
+error.nocourse          = You have to select a course.
+error.saveallcharts     = Can't export charts.
+error.savechart         = Error saving chart.
+error.savecsvfiles      = The data could not be exported in CSV format.
+error.updateofflinemode = The course cannot be updated in offline mode. Please log out and log back in online mode.
+error.userdata          = Error when recovering user data.
 
-header.passwordChangedMessage = Detected was password changed
-header.passwordDateTime       = Previous date password: 
+header.passwordChangedMessage   = Detected was password changed
+header.passwordDateTime         = Previous date password: 
+header.passwordIncorrectMessage = Password incorrect
 
 html.btnActivitiesTable = Activity Completion
 html.btnBoxPlot         = Boxplot
@@ -602,6 +605,7 @@ tab.section      = Sections
 
 text.all                = All
 text.betweendates       = Between {0} and {1}
+text.cache              = Local Files
 text.confirmation       = Confirmation
 text.confirmationtext   = Are you sure to remove the cache of the selected course?
 text.days               = Days
@@ -621,6 +625,7 @@ text.sectionplaceholder = Front page
 text.selectedUsers      = Selected Users
 text.stats              = Statistics
 
-title.passwordChanged = Password was changed
+title.passwordChanged   = Password was changed
+title.passwordIncorrect = Password incorrect
 
 tooltip.insecureprotocol = This connection is not secure.\r\nCredentials may be compromised.
