--- a/resources/messages/Messages_es.properties
+++ b/resources/messages/Messages_es.properties
@@ -24,6 +24,7 @@ chartlabel.upperlimit     = Limite Superior
 
 checkbox.updatedata = Actualizar datos
 
+chk.offlinemode  = Modo offline
 chk.savehost     = Recordar host
 chk.saveusername = Recordar usuario
 
@@ -37,20 +38,22 @@ choiceBox.YEAR_MONTH   = Meses
 choiceBox.YEAR_QUARTER = Trimestres
 choiceBox.YEAR_WEEK    = Semanas
 
-error.fields          = Debes completar todos los campos.
-error.generateCharts  = No se han podido generar los gr\u00E1ficos.
-error.generatedataset = Error en la construcci\u00F3n del dataset.
-error.host            = No se ha podido conectar con el host.
-error.login           = Usuario y/o contrase\u00F1a incorrectos.
-error.malformedurl    = URL mal formada. \u00BFHas a\u00F1adido protocolo http(s)?
-error.nocourse        = Debe seleccionar un curso.
-error.saveallcharts   = No se han podido exportar los gr\u00E1ficos.
-error.savechart       = Error al gruardar el gr\u00E1fico.
-error.savecsvfiles    = No se han podido exportar los datos en formato CSV.
-error.userdata        = Error al recuperar los datos del usuario.
+error.fields            = Debes completar todos los campos.
+error.generateCharts    = No se han podido generar los gr\u00E1ficos.
+error.generatedataset   = Error en la construcci\u00F3n del dataset.
+error.host              = No se ha podido conectar con el host.
+error.login             = Usuario y/o contrase\u00F1a incorrectos.
+error.malformedurl      = URL mal formada. \u00BFHas a\u00F1adido protocolo http(s)?
+error.nocourse          = Debe seleccionar un curso.
+error.saveallcharts     = No se han podido exportar los gr\u00E1ficos.
+error.savechart         = Error al gruardar el gr\u00E1fico.
+error.savecsvfiles      = No se han podido exportar los datos en formato CSV.
+error.updateofflinemode = No se puede actualizar el curso en modo offline. Por favor, cierre sesi\u00F3n y vuelva a iniciar sesi\u00F3n en modo online
+error.userdata          = Error al recuperar los datos del usuario.
 
-header.passwordChangedMessage = Se ha detectado que se ha cambiado la contrase\u00F1a
-header.passwordDateTime       = Fecha de la contrase\u00F1a antigua: 
+header.passwordChangedMessage   = Se ha detectado que se ha cambiado la contrase\u00F1a
+header.passwordDateTime         = Fecha de la contrase\u00F1a antigua: 
+header.passwordIncorrectMessage = Contrase\u00F1a incorrecta
 
 html.btnActivitiesTable = Finalizaci\u00F3n Actividad
 html.btnBoxPlot         = Boxplot
@@ -82,7 +85,7 @@ label.group                       = Grupo:
 label.groupbydate                 = Agrupar por: 
 label.host                        = Host:
 label.lastupdate                  = \u00DAltima actualizaci\u00F3n local:
-label.loadingActivitiesCompletion = Downloading Activity Completion for every user...
+label.loadingActivitiesCompletion = Descarga de Actividad de finalizaci\u00F3n para cada usuario ...
 label.loadingqualifier            = Generando el calificador del curso... (Este proceso puede tardar unos minutos)
 label.loadingstats                = Generando estadisticas...
 label.loadingstudents             = Calificaciones de alumnos cargadas: 
@@ -602,6 +605,7 @@ tab.section      = Secci\u00F3n
 
 text.all                = Todos
 text.betweendates       = Entre {0} y {1} d\u00EDas
+text.cache              = Archivos locales
 text.confirmation       = Confirmaci\u00F3n
 text.confirmationtext   = \u00BFEstas seguro de borrar la cach\u00E9 del curso seleccionado?
 text.days               = d\u00EDas
@@ -621,6 +625,7 @@ text.sectionplaceholder = P\u00E1gina principal
 text.selectedUsers      = Usuarios Seleccionados
 text.stats              = Estad\u00EDsticas
 
-title.passwordChanged = Contrase\u00F1a modificada
+title.passwordChanged   = Contrase\u00F1a modificada
+title.passwordIncorrect = Contrase\u00F1a incorrecta
 
 tooltip.insecureprotocol = Esta conexi\u00F3n no es segura.\nLas credenciales pueden verse comprometidas.
