--- a/resources/messages/Messages_fr.properties
+++ b/resources/messages/Messages_fr.properties
@@ -24,6 +24,7 @@ chartlabel.upperlimit     = Limite sup\u00E9rieure
 
 checkbox.updatedata = Mettre \u00E0 jour les donn\u00E9es
 
+chk.offlinemode  = Mode hors-ligne
 chk.savehost     = Rappelez-vous l'h\u00F4te
 chk.saveusername = Se souvenir de l'utilisateur
 
@@ -37,20 +38,22 @@ choiceBox.YEAR_MONTH   = Mois
 choiceBox.YEAR_QUARTER = Trimestres
 choiceBox.YEAR_WEEK    = Semaines
 
-error.fields          = Vous devez remplir tous les champs.
-error.generateCharts  = Impossible de g\u00E9n\u00E9rer des graphiques.
-error.generatedataset = Erreur lors de la construction du jeu de donn\u00E9es.
-error.host            = Impossible de se connecter avec l'h\u00F4te.
-error.login           = Mauvais nom d'utilisateur ou mot de passe.
-error.malformedurl    = URL mal form\u00E9e. Avez-vous ajout\u00E9 le protocole http (s)?
-error.nocourse        = Vous devez choisir un cours.
-error.saveallcharts   = Impossible d'exporter des graphiques.
-error.savechart       = Erreur d'enregistrement du graphique.
-error.savecsvfiles    = Les donn\u00E9es n'ont pas pu \u00EAtre export\u00E9es au format CSV.
-error.userdata        = Erreur lors de la r\u00E9cup\u00E9ration des donn\u00E9es utilisateur.
+error.fields            = Vous devez remplir tous les champs.
+error.generateCharts    = Impossible de g\u00E9n\u00E9rer des graphiques.
+error.generatedataset   = Erreur lors de la construction du jeu de donn\u00E9es.
+error.host              = Impossible de se connecter avec l'h\u00F4te.
+error.login             = Mauvais nom d'utilisateur ou mot de passe.
+error.malformedurl      = URL mal form\u00E9e. Avez-vous ajout\u00E9 le protocole http (s)?
+error.nocourse          = Vous devez choisir un cours.
+error.saveallcharts     = Impossible d'exporter des graphiques.
+error.savechart         = Erreur d'enregistrement du graphique.
+error.savecsvfiles      = Les donn\u00E9es n'ont pas pu \u00EAtre export\u00E9es au format CSV.
+error.updateofflinemode = Le cours ne peut pas \u00EAtre mis \u00E0 jour en mode hors ligne. S'il vous pla\u00EEt vous d\u00E9connecter et vous reconnecter en mode en ligne.
+error.userdata          = Erreur lors de la r\u00E9cup\u00E9ration des donn\u00E9es utilisateur.
 
-header.passwordChangedMessage = D\u00E9tect\u00E9 a \u00E9t\u00E9 chang\u00E9 le mot de passe
-header.passwordDateTime       = Date pr\u00E9c\u00E9dente mot de passe:
+header.passwordChangedMessage   = D\u00E9tect\u00E9 a \u00E9t\u00E9 chang\u00E9 le mot de passe
+header.passwordDateTime         = Date pr\u00E9c\u00E9dente mot de passe:
+header.passwordIncorrectMessage = Mot de passe incorrect
 
 html.btnActivitiesTable = Ach\u00E8vement d'activit\u00E9s
 html.btnBoxPlot         = Boxplot
@@ -602,6 +605,7 @@ tab.section      = Section
 
 text.all                = Tout
 text.betweendates       = Between {0} and {1}
+text.cache              = Fichiers locaux
 text.confirmation       = Confirmation
 text.confirmationtext   = Are you sure to remove the cache of the selected course?
 text.days               = Journ\u00E9es
@@ -621,6 +625,7 @@ text.sectionplaceholder = Page de garde
 text.selectedUsers      = Selected Users
 text.stats              = Statistiques
 
-title.passwordChanged = Le mot de passe a \u00E9t\u00E9 chang\u00E9
+title.passwordChanged   = Le mot de passe a \u00E9t\u00E9 chang\u00E9
+title.passwordIncorrect = Mot de passe incorrect
 
 tooltip.insecureprotocol = Cette connexion n'est pas s\u00E9curis\u00E9e.\r\nLes informations d'identification peuvent \u00EAtre compromises.
