--- a/resources/messages/Messages_it.properties
+++ b/resources/messages/Messages_it.properties
@@ -24,6 +24,7 @@ chartlabel.upperlimit     = Limite superiore
 
 checkbox.updatedata = Aggiorna i dati
 
+chk.offlinemode  = Modalit\u00E0 offline
 chk.savehost     = Ricorda l'host
 chk.saveusername = Ricorda il nome utente
 
@@ -37,20 +38,22 @@ choiceBox.YEAR_MONTH   = mesi
 choiceBox.YEAR_QUARTER = alloggio
 choiceBox.YEAR_WEEK    = settimane
 
-error.fields          = Devi completare tutti i campi.
-error.generateCharts  = Non posso generare grafici.
-error.generatedataset = Errore durante la creazione del set di dati.
-error.host            = Impossibile connettersi con l'host.
-error.login           = Username o password errati.
-error.malformedurl    = URL mal formato. Hai aggiunto il protocollo http (s)?
-error.nocourse        = Devi selezionare un corso.
-error.saveallcharts   = Impossibile esportare i grafici.
-error.savechart       = Errore durante il salvataggio del grafico.
-error.savecsvfiles    = I dati non possono essere esportati in formato CSV.
-error.userdata        = Errore durante il recupero dei dati dell'utente.
+error.fields            = Devi completare tutti i campi.
+error.generateCharts    = Non posso generare grafici.
+error.generatedataset   = Errore durante la creazione del set di dati.
+error.host              = Impossibile connettersi con l'host.
+error.login             = Username o password errati.
+error.malformedurl      = URL mal formato. Hai aggiunto il protocollo http (s)?
+error.nocourse          = Devi selezionare un corso.
+error.saveallcharts     = Impossibile esportare i grafici.
+error.savechart         = Errore durante il salvataggio del grafico.
+error.savecsvfiles      = I dati non possono essere esportati in formato CSV.
+error.updateofflinemode = Il corso non pu\u00F2 essere aggiornato in modalit\u00E0 offline. Si prega di disconnettersi e riconnettersi in modalit\u00E0 online.
+error.userdata          = Errore durante il recupero dei dati dell'utente.
 
-header.passwordChangedMessage = Rilevato \u00E8 stata modificata la password
-header.passwordDateTime       = Data precedente password:
+header.passwordChangedMessage   = Rilevato \u00E8 stata modificata la password
+header.passwordDateTime         = Data precedente password:
+header.passwordIncorrectMessage = Password non corretta
 
 html.btnActivitiesTable = Completamento attivit\u00E0
 html.btnBoxPlot         = Boxplot
@@ -602,6 +605,7 @@ tab.section      = Sezione
 
 text.all                = Tutti
 text.betweendates       = Between {0} and {1}
+text.cache              = File locali
 text.confirmation       = Confirmation
 text.confirmationtext   = Are you sure to remove the cache of the selected course?
 text.days               = giorni
@@ -621,6 +625,7 @@ text.sectionplaceholder = Prima pagina
 text.selectedUsers      = Selected Users
 text.stats              = Statistiche
 
-title.passwordChanged = La password \u00E8 stata cambiata
+title.passwordChanged   = La password \u00E8 stata cambiata
+title.passwordIncorrect = Password non corretta
 
 tooltip.insecureprotocol = Questa connessione non \u00E8 sicura.\r\nLe credenziali potrebbero essere compromesse.
