--- a/resources/messages/Messages_pt.properties
+++ b/resources/messages/Messages_pt.properties
@@ -24,6 +24,7 @@ chartlabel.upperlimit     = Limite superior
 
 checkbox.updatedata = Atualizar dados
 
+chk.offlinemode  = Modo offline
 chk.savehost     = Lembre-se do host
 chk.saveusername = Lembre-se de nome de usu\u00E1rio
 
@@ -37,20 +38,22 @@ choiceBox.YEAR_MONTH   = Meses
 choiceBox.YEAR_QUARTER = Quartos
 choiceBox.YEAR_WEEK    = Semanas
 
-error.fields          = Voc\u00EA tem que completar todos os campos.
-error.generateCharts  = N\u00E3o \u00E9 poss\u00EDvel gerar gr\u00E1ficos.
-error.generatedataset = Erro ao construir o conjunto de dados.
-error.host            = N\u00E3o \u00E9 poss\u00EDvel conectar-se ao host.
-error.login           = Nome de usu\u00E1rio ou senha incorretos.
-error.malformedurl    = URL mal formado. Voc\u00EA adicionou o protocolo http (s)?
-error.nocourse        = Voc\u00EA tem que selecionar um curso.
-error.saveallcharts   = N\u00E3o \u00E9 poss\u00EDvel exportar gr\u00E1ficos.
-error.savechart       = Erro ao salvar gr\u00E1fico.
-error.savecsvfiles    = Os dados n\u00E3o puderam ser exportados no formato CSV.
-error.userdata        = Erro ao recuperar dados do usu\u00E1rio.
+error.fields            = Voc\u00EA tem que completar todos os campos.
+error.generateCharts    = N\u00E3o \u00E9 poss\u00EDvel gerar gr\u00E1ficos.
+error.generatedataset   = Erro ao construir o conjunto de dados.
+error.host              = N\u00E3o \u00E9 poss\u00EDvel conectar-se ao host.
+error.login             = Nome de usu\u00E1rio ou senha incorretos.
+error.malformedurl      = URL mal formado. Voc\u00EA adicionou o protocolo http (s)?
+error.nocourse          = Voc\u00EA tem que selecionar um curso.
+error.saveallcharts     = N\u00E3o \u00E9 poss\u00EDvel exportar gr\u00E1ficos.
+error.savechart         = Erro ao salvar gr\u00E1fico.
+error.savecsvfiles      = Os dados n\u00E3o puderam ser exportados no formato CSV.
+error.updateofflinemode = O curso n\u00E3o pode ser atualizado no modo offline. Por favor, saia e entre novamente no modo online.
+error.userdata          = Erro ao recuperar dados do usu\u00E1rio.
 
-header.passwordChangedMessage = Detectado foi senha alterada
-header.passwordDateTime       = Senha da data anterior:
+header.passwordChangedMessage   = Detectado foi senha alterada
+header.passwordDateTime         = Senha da data anterior:
+header.passwordIncorrectMessage = Senha incorreta
 
 html.btnActivitiesTable = Conclus\u00E3o das atividades
 html.btnBoxPlot         = Boxplot
@@ -602,6 +605,7 @@ tab.section      = Se\u00E7\u00E3o
 
 text.all                = Todos
 text.betweendates       = Between {0} and {1}
+text.cache              = Ficheiros locais
 text.confirmation       = Confirmation
 text.confirmationtext   = Are you sure to remove the cache of the selected course?
 text.days               = Dias
@@ -621,6 +625,7 @@ text.sectionplaceholder = Primeira p\u00E1gina
 text.selectedUsers      = Selected Users
 text.stats              = Estat\u00EDsticas
 
-title.passwordChanged = Senha foi alterada
+title.passwordChanged   = Senha foi alterada
+title.passwordIncorrect = Senha incorreta
 
 tooltip.insecureprotocol = Esta conex\u00E3o n\u00E3o \u00E9 segura.\r\nCredenciais podem estar comprometidas.
